examples/33-aws-eks-ecomm-3-istio/5-App/mongo-endpoints.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: mongodb-svc
  namespace: shoppingportal
subsets:
  -
    addresses:
      -
        ip: 10.0.6.111
    ports:
      -
        port: 27017
        name: mongodb-svc
