examples/33-aws-eks-ecomm-3-istio/5-App/shoppingportal-ing-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-ingress
  namespace: shoppingportal
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /ui/
        pathType: Prefix
        backend:
          service:
            name: ms-sp-ui-svc
            port: 
             number: 80
      - path: /product-service/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port: 
              number: 80
      - path: /product-review-service/
        pathType: Prefix
        backend:
          service:
            name: product-review-service
            port: 
              number: 80
      - path: /payment-service/
        pathType: Prefix
        backend:
           service:    
             name: payment-service
             port: 
               number: 80 
      - path: /user-svc/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port: 
              number: 80
      - path: /order-service/
        pathType: Prefix
        backend:
          service:
            name: order-service
            port: 
              number: 80
      - path: /shopping-cart-cmd-service/
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-cmd-service
            port: 
              number: 80
      - path: /shopping-cart-query-service/
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-query-service
            port: 
              number: 80  
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin-svc
            port: 
              number: 80
